# static-site-generator

./: Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  tailwind.config.js
src/: main.rs  markdown_parser.rs  router.rs
src/components/: card.rs  footer.rs  header.rs  hero.rs  mod.rs  theme_switcher.rs
src/pages/: about.rs  contact.rs  home.rs  mod.rs  post.rs
src/posts/: first.md  fourth.md  second.md  third.md
styles/: input.css
