[package]
name = "blog_website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gray_matter = "0.2.5"
include_dir = "0.7.3"
lazy_static = "1.4.0"
log = "0.4.17"
pulldown-cmark = "0.9.2"
serde = "1.0.158"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yew_icons = { version = "0.7.0", features = ["BootstrapSunFill", "BootstrapMoonFill", "FontAwesomeSolidBars"] }
gloo = "0.8.0"
gloo-storage = "0.2.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window"
]
